Addition of Material Design to our Project
1. MatButton
2. MatInput
2. MatToolbar
3. MatCard

--- a/src/app/post/post-create/post-create.component.html
+++ b/src/app/post/post-create/post-create.component.html
@@ -1,4 +1,10 @@
-<textarea rows="6" [(ngModel)]="postInput"></textarea>
-<hr>
-<button (click)="addPost()">Save Post</button>
+<mat-card>
+  <mat-form-field>
+    <textarea matInput rows="6" [(ngModel)]="postInput"></textarea>
+  </mat-form-field>
+  <button mat-raised-button color="accent" (click)="addPost()">Save Post</button>
+</mat-card>
+
+
+
 <p>{{ newPost }}</p>
