--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <app-header></app-header>
 
-<app-post-create></app-post-create>
+<main>
+  <app-post-create></app-post-create>
+  <app-post-list></app-post-list>
+</main>
+
+
