--- a/src/app/post/post-create/post-create.component.html
+++ b/src/app/post/post-create/post-create.component.html
@@ -1,8 +1,14 @@
 <mat-card>
   <mat-form-field>
-    <textarea matInput rows="6" [(ngModel)]="postInput"></textarea>
+    <mat-label>Post Title</mat-label>
+    <input matInput placeholder="Ex. Wedding" [(ngModel)]="newPostTitle">
   </mat-form-field>
-  <button mat-raised-button color="accent" (click)="addPost()">Save Post</button>
+
+  <mat-form-field>
+    <mat-label>Write Post</mat-label>
+    <textarea matInput rows="6" placeholder="Ex. It makes me feel..." [(ngModel)]="newPostContent"></textarea>
+  </mat-form-field>
+  <button mat-raised-button color="accent" (click)="onPostAdded()">Save Post</button>
 </mat-card>
 
 
