--- a/src/app/post/post-create/post-create.component.html
+++ b/src/app/post/post-create/post-create.component.html
@@ -1,14 +1,16 @@
 <mat-card>
-  <mat-form-field>
-    <mat-label>Post Title</mat-label>
-    <input matInput placeholder="Ex. Wedding" [(ngModel)]="newPostTitle">
-  </mat-form-field>
+  <form>
+    <mat-form-field>
+      <mat-label>Post Title *</mat-label>
+      <input matInput placeholder="Ex. Wedding" [(ngModel)]="newPostTitle">
+    </mat-form-field>
 
-  <mat-form-field>
-    <mat-label>Write Post</mat-label>
-    <textarea matInput rows="6" placeholder="Ex. It makes me feel..." [(ngModel)]="newPostContent"></textarea>
-  </mat-form-field>
-  <button mat-raised-button color="accent" (click)="onPostAdded()">Save Post</button>
+    <mat-form-field>
+      <mat-label>Write Post *</mat-label>
+      <textarea matInput rows="6" placeholder="Ex. It makes me feel..." [(ngModel)]="newPostContent"></textarea>
+    </mat-form-field>
+    <button mat-raised-button color="accent" (click)="onPostAdded()">Save Post</button>
+  </form>
 </mat-card>
 
 
