--- a/src/app/post/post-create/post-create.component.html
+++ b/src/app/post/post-create/post-create.component.html
@@ -1,15 +1,17 @@
 <mat-card>
-  <form>
+  <form (submit)="onPostAdded(postForm)" #postForm="ngForm">
     <mat-form-field>
-      <mat-label>Post Title *</mat-label>
-      <input matInput placeholder="Ex. Wedding" [(ngModel)]="newPostTitle">
+      <!-- <mat-label>Post Title *</mat-label> -->
+      <input matInput placeholder="Post Title" name="title" ngModel required minlength="5" #title="ngModel">
+      <mat-error *ngIf="title.invalid">Please enter a Title</mat-error>
     </mat-form-field>
 
     <mat-form-field>
-      <mat-label>Write Post *</mat-label>
-      <textarea matInput rows="6" placeholder="Ex. It makes me feel..." [(ngModel)]="newPostContent"></textarea>
+      <!-- <mat-label>Write Post *</mat-label> -->
+      <textarea matInput rows="6" placeholder="Post Content" name="content" ngModel required #content="ngModel"></textarea>
+      <mat-error *ngIf="content.invalid">Please enter your content</mat-error>
     </mat-form-field>
-    <button mat-raised-button color="accent" (click)="onPostAdded()">Save Post</button>
+    <button mat-raised-button color="accent" type="submit">Save Post</button>
   </form>
 </mat-card>
 
