Add Post Service wihout Property and Event Binding
1. Post Service is a dependency injection. by this service, I can't pass
   data between components without complex chain of event and property
   bindings.
2. Also add Subject(rxjs)  which is similar to the EventEmitter(Angular)
3. We listen to this Subject by emit next event which is an observable.
   but this next event is called observer.
4. We create a constructor of any component class and add subcription to
   this class by injecting our service to that component.

--- a/src/app/post/post-list/post-list.component.html
+++ b/src/app/post/post-list/post-list.component.html
@@ -6,6 +6,10 @@
       </mat-panel-title>
     </mat-expansion-panel-header>
     <p>{{post.content}}</p>
+    <mat-action-row>
+      <button mat-button color="primary" (click)="prevStep()">EDIT</button>
+      <button mat-button color="warn" (click)="nextStep()">DELETE</button>
+    </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
 <p class="info-text mat-body-strong" *ngIf="posts.length < 1">No Post Added</p>
