--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 
 <main>
-  <app-post-create (newPostAdded)="onPostAdded($event)"></app-post-create>
-  <app-post-list [posts]="postList"></app-post-list>
+  <app-post-create></app-post-create>
+  <app-post-list></app-post-list>
 </main>
 
 
