--- a/src/app/post/post-create/post-create.component.html
+++ b/src/app/post/post-create/post-create.component.html
@@ -1,14 +1,16 @@
+
 <mat-card>
-  <form (submit)="onPostAdded(postForm)" #postForm="ngForm">
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
+  <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
     <mat-form-field>
       <!-- <mat-label>Post Title *</mat-label> -->
-      <input matInput placeholder="Post Title" name="title" ngModel required minlength="5" #title="ngModel">
+      <input matInput placeholder="Post Title" name="title" [ngModel]="post?.title" required minlength="5" #title="ngModel">
       <mat-error *ngIf="title.invalid">Please enter a Title</mat-error>
     </mat-form-field>
 
     <mat-form-field>
       <!-- <mat-label>Write Post *</mat-label> -->
-      <textarea matInput rows="6" placeholder="Post Content" name="content" ngModel required #content="ngModel"></textarea>
+      <textarea matInput rows="6" placeholder="Post Content" name="content" [ngModel]="post?.content" required #content="ngModel"></textarea>
       <mat-error *ngIf="content.invalid">Please enter your content</mat-error>
     </mat-form-field>
     <button mat-raised-button color="accent" type="submit">Save Post</button>
