--- a/src/app/post/post-create/post-create.component.html
+++ b/src/app/post/post-create/post-create.component.html
@@ -1,17 +1,20 @@
 
 <mat-card>
   <mat-spinner *ngIf="isLoading"></mat-spinner>
-  <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
+  <form [formGroup]="form" (submit)="onSavePost()" *ngIf="!isLoading">
     <mat-form-field>
       <!-- <mat-label>Post Title *</mat-label> -->
-      <input matInput placeholder="Post Title" name="title" [ngModel]="post?.title" required minlength="5" #title="ngModel">
-      <mat-error *ngIf="title.invalid">Please enter a Title</mat-error>
+      <input matInput placeholder="Post Title" name="title" formControlName="title">
+      <mat-error *ngIf="form.get('title').invalid">Please enter a Title</mat-error>
     </mat-form-field>
-
+    <div>
+      <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
+      <input type="file" #filePicker>
+    </div>
     <mat-form-field>
       <!-- <mat-label>Write Post *</mat-label> -->
-      <textarea matInput rows="6" placeholder="Post Content" name="content" [ngModel]="post?.content" required #content="ngModel"></textarea>
-      <mat-error *ngIf="content.invalid">Please enter your content</mat-error>
+      <textarea matInput rows="6" placeholder="Post Content" name="content" formControlName="content"></textarea>
+      <mat-error *ngIf="form.get('content').invalid">Please enter your content</mat-error>
     </mat-form-field>
     <button mat-raised-button color="accent" type="submit">Save Post</button>
   </form>
