Uploading Image Done in  Front End
1. Mainly, I implemented a MIMETYPE validator with Observable
2. UI is updated with Image Input, but it is not attached to HTML Form
   but, in Angular Reactive form we attached it.
3. MIMETYPE Validator is working fine

--- a/src/app/post/post-create/post-create.component.css
+++ b/src/app/post/post-create/post-create.component.css
@@ -15,3 +15,20 @@ mat-spinner {
 input[type="file"] {
   visibility: hidden;
 }
+
+.pick-image {
+  margin: 10px 0px;
+}
+
+.image-preview {
+  height: 10rem;
+  margin: 1rem 0;
+}
+
+.image-preview img {
+  height: 100%;
+}
+
+.error-image{
+  margin: 5px 5px 10px;
+}
