--- a/src/app/post/post-create/post-create.component.html
+++ b/src/app/post/post-create/post-create.component.html
@@ -7,15 +7,24 @@
       <input matInput placeholder="Post Title" name="title" formControlName="title">
       <mat-error *ngIf="form.get('title').invalid">Please enter a Title</mat-error>
     </mat-form-field>
-    <div>
-      <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
-      <input type="file" #filePicker>
-    </div>
+
     <mat-form-field>
       <!-- <mat-label>Write Post *</mat-label> -->
       <textarea matInput rows="6" placeholder="Post Content" name="content" formControlName="content"></textarea>
       <mat-error *ngIf="form.get('content').invalid">Please enter your content</mat-error>
     </mat-form-field>
+
+    <div>
+      <button mat-stroked-button class="pick-image" type="button" (click)="filePicker.click()">Pick Image</button>
+      <input type="file" #filePicker (change)="onImagePicked($event)">
+    </div>
+    <div class="image-preview" *ngIf="imageUrl !== '' && imageUrl && form.get('image').valid">
+      <img [src]="imageUrl" alt="form.value.title">
+    </div>
+    <div>
+      <mat-error class="error-image" *ngIf="imageUrl !== '' && imageUrl && form.get('image').invalid">Please Pick A Valid Image</mat-error>
+    </div>
+
     <button mat-raised-button color="accent" type="submit">Save Post</button>
   </form>
 </mat-card>
