--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -4,6 +4,7 @@ a {
 }
 
 ul {
+  display: flex;
   list-style: none;
   padding: 0px;
   margin: 0px;
@@ -12,3 +13,4 @@ ul {
 .spacer{
   flex: 1 1 auto;
 }
+
