SignUp and Login ready with Backend & Middlware Working
1. Implemented Signup with hashed password
2. Implemented Login with token generation and bug fixes
3. Implemented checking-auth middleware function for API accessing
4. But, from front-end we didn't attach that TOKEN for authentication
   but after login we are getting the token at Front-End

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -9,7 +9,7 @@
 
     <mat-form-field>
       <!-- <mat-label>Write Post *</mat-label> -->
-      <input matInput placeholder="Password" name="password" ngModel #inputPassword="ngModel" required>
+      <input matInput type="password" placeholder="Password" name="password" ngModel #inputPassword="ngModel" required>
       <mat-error *ngIf="inputPassword.invalid">Please enter your valid Password</mat-error>
     </mat-form-field>
 
