--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,9 +2,10 @@
   <span><a routerLink="/">My Messages</a></span>
   <span class="spacer"></span>
   <ul>
-    <li><a mat-button routerLink="/create" routerLinkActive="mat-accent">New Post</a></li>
-    <li><a mat-button routerLink="/login" routerLinkActive="mat-accent">Login</a></li>
-    <li><a mat-button routerLink="/signup" routerLinkActive="mat-accent">Sign Up</a></li>
+    <li><a mat-button routerLink="/create" routerLinkActive="mat-accent" *ngIf="isAuthenticated">New Post</a></li>
+    <li><a mat-button routerLink="/login" routerLinkActive="mat-accent" *ngIf="!isAuthenticated">Login</a></li>
+    <li><a mat-button routerLink="/signup" routerLinkActive="mat-accent" *ngIf="!isAuthenticated">Sign Up</a></li>
+    <li><button mat-button *ngIf="isAuthenticated" (click)="onLogout()">Logout</button></li>
   </ul>
 </mat-toolbar>
 
